- Add INI option ShutdownWhenDone=false to specify the OS to shutdown as soon as optimization of all files is done (guindos98).
- On Windows XP, log seems fine, but files get not processed and finally the original file deleted (Vivil).

- Multithreading support: 
	* http://op.htmsoft.com/articles/Articlea1-2-1.html
	* http://elvex.ugr.es/decsai/builder/threads/

- Implement a Statistic section in INI file: Total time, total opens, total files processed, total Mbytes porcessed, total Mbytes saved, ...

- Deletes files instead of processing them. https://sourceforge.net/p/nikkhokkho/discussion/fileoptimizer/thread/ced9a3af/ (Vivil).

- Make sure that 32 bit PNG images with few colors, keep transparency when converted to 8 bit PNG files (Newtomic).

- En rollover de grid poner el hint de su string y sin showparenthint.

- The ability to specify an output directory (Runner112).

- Truncate filenames in cell draw.

- Add ffmpeg
	KS_EXTENSION_MP4
	KS_EXTENSION_MPEG: AVI, MPG, MPEG
	KS_EXTENSION_FLV: FLV
	KS_EXTENSION_WMV: WMV, WMA 
	KS_EXTENSION_RM: RV, RA, RM, RMVB, RAM. SMIL
	ffmpeg.exe -i INPUT -vcodec copy -acodec copy OUTPUT


- Add Information option on context menu.

- Optimize GetExtensionByContent to use regular comparisons instead of memcmp for short comparisons.

- Make quick access customized buttons permanent in ribbon, as well as its visibility and size (Newatomic).

- Add an option to choose between ribbon interface and regular Windows menus (Newatomic).

- Password protected PDF files generate empty PDF files after optimization (sambufalo).

- rehuff corrupt OGG files when run several times (Tomasz W.).

- Add huffmix.exe, pngzopfli.exe and zopfli.exe (http://encode.ru/threads/1717-ZopfliPNG) to the PNG chain. Zopflipng should not be needed since is already in use by Leanify (telegenesis).

- Running jpg > arith jpg and then result file again into arith jpg reduces it further (necros).